--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,12 +19,15 @@ h6 {
   font-family: "Lora", serif;
   font-size: 1.6rem;
 }
-/* margin-for-header */
-.fixed-top-margin {
+.fiexed-top-margin {
   margin-top: 148px;
 }
+/* margin-for-header */
 .item-page-fixed-top-margin {
   margin-top: 114px;
+}
+.hide-image {
+  display: none;
 }
 /* prevPageButton */
 .prevPageButton {
@@ -38,23 +41,20 @@ h6 {
 }
 /* button */
 .button {
-  padding: 36px;
+  margin-top: 10px;
 }
 .button a {
   text-decoration: none;
-  color: #007987;
-  font-weight: 600;
-  font-size: 1.26rem;
+  color: #ffffff;
+  font-size: 1rem;
   padding: 10px 20px;
-  background: white;
   border-radius: 7px;
   text-transform: uppercase;
-  border: 1px solid #0f3f54;
+  border: 1px solid #ffffff;
   letter-spacing: 2px;
 }
 .button a:hover {
-  background-color: #32e2f7;
-  color: #ffffff;
+  color: #32e2f7;
   border: 1px solid #ffffff;
   transition: 0.5s ease;
 }
@@ -113,11 +113,6 @@ h6 {
   color: #0f3f54;
   margin-right: 5px;
 }
-.card-off-price {
-  font-weight: bold;
-  text-decoration: line-through;
-  color: #787878;
-}
 .card-button {
   background-color: #12bed2;
   color: #001e22;
@@ -134,20 +129,7 @@ h6 {
 .card-single-button {
   justify-content: center !important;
 }
-/* banner */
-.banner {
-  width: 100%;
-  height: max-content;
-  padding: 85px 0px;
-  background-image: url(../images/banner-dark.png);
-  background-size: cover;
-}
-.banner-time {
-  background-color: #0c0c0c70;
-  background-color: #0c0c0c70;
-  border-radius: 8px;
-  padding: 10px;
-}
+
 /* header */
 .header {
   background-color: #32e2f7;
@@ -196,26 +178,19 @@ h6 {
   margin: 0 300px;
   text-align: center;
 }
-
-.banner-text h2,
 .section-title h2 {
   color: #ffffff;
   font-size: 3rem;
   line-height: 1.25em;
   font-weight: bold;
 }
-.banner-text p {
-  font-size: 1.24rem;
-  line-height: 1.375em;
-  color: #ffff;
-}
+
 /* emply-space */
 .emply-space {
   height: 80px;
   width: 100%;
 }
 /* section title  */
-
 .section-title h2 {
   text-align: center;
   margin: 62px;
@@ -308,4 +283,47 @@ h6 {
 .single-item-list-min {
   padding: 15px;
   font-weight: 600;
+}
+/* mobile view welcome text */
+.mobile-welcome-text {
+  display: none;
+}
+/* swiper.css */
+.mySwiper {
+  height: 485px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.swiper-slide {
+  width: 580px !important;
+  height: 375px;
+  border-radius: 7px;
+}
+.swiper-slide img {
+  width: 90% !important;
+  height: 360px;
+  border-radius: 7px;
+  margin: 0 auto;
+  display: block;
+}
+.swiper-wrapper {
+  align-items: center;
+}
+
+.swiper-slide-active {
+  transform: scale(1.2) !important;
+  transition: 0.4s;
+}
+.mySlider-info {
+  width: 85%;
+  padding: 24px 0px;
+  position: absolute;
+  bottom: 95px;
+  left: 44px;
+  text-align: center;
+  color: white;
+  background: #0909099c;
+}
+.mySlider-info p {
+  padding: 10px;
 }
