--- a/assets/css/mediaquary.css
+++ b/assets/css/mediaquary.css
@@ -78,12 +78,6 @@
   .about-images img {
     margin: 10px auto;
   }
-  .contact {
-    display: block;
-  }
-  .contact-image {
-    display: none;
-  }
   /* footer */
   .footer {
     padding: 40px;
@@ -158,6 +152,17 @@
     color: #0f3f54;
   }
 }
+
+@media (max-width: 753px) {
+  .contact {
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact-info {
+    width: 50%;
+    margin-top: 10px;
+  }
+}
 /* Moblie view */
 @media (max-width: 480px) {
   .mobile-welcome-text h2 {
@@ -173,6 +178,9 @@
   }
   .bookingButton a {
     width: 60%;
+  }
+  .contact-info {
+    width: 80%;
   }
 }
 /* @media (max-width: 361px) {
