--- a/assets/css/mediaquary.css
+++ b/assets/css/mediaquary.css
@@ -100,6 +100,7 @@
     margin-top: 109px;
     text-align: center;
     color: #0f3f64;
+    min-height: 100%;
   }
   .mobile-welcome-text p {
     color: #302e2e;
